# scripts

./: .gitignore  README.md  access.json  mapping.csv  requirements.txt  silentLxpy.py  test.yaml
aceAutomation/: README.md  populateaces.py
archiveFactSheets/: Book1.csv  README.md  archive.py  pyproject.toml
backupPermissions/: backupPermissions.py
bulkWSCreationInvitation/: Book1.xlsx  Book2.xlsx  README.md  sap_workspace_creation.py  sap_workspace_preparation.py
changeBookmarkOwner/: README.md  bookmarkUpdates.csv  changeBookmarkOwner.py
changeSubscriptionComment/: README.md  changeSubscriptionComment.py
cleanupOrphanedRelations/: README.md  cleanupOrphanedRelations.py  pyproject.toml
correctUserAccount/: README.md  correctUserAccount.py
createDashboard/: README.md  createDashboard.py  pyproject.toml
createDocuments/: Book1.csv  README.md  URLS.csv  createDocuments.py  pyproject.toml  urls_to_ldif.py
deleteDocuments/: README.md  deleteDocuments.py  pyproject.toml
deleteTags/: Book1.csv  README.md  deleteTag.py  pyproject.toml
diagramVsmProduct/: Dockerfile  README.md  diagram_vsm_product.py
exampleInputFiles/: Book1.csv  Book1.xlsx
exportCosts/: README.md  exportCosts.py  pyproject.toml
fixConstrainingRelations/: README.md  fixConstrainingRelations.py  pyproject.toml
getFactsheetsCreatedByUser/: README.md  (+2 more)
importRelationsAndAttributesFromLeanIXExcel/: README.md  configs.json  importRelationLDIF.json  importRelationsConnector.json  pyproject.toml  run.py
importRelationsAndAttributesFromLeanIXExcel/run_files/: Template.xlsx
(+152 files in other folders)
